@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX postgresql-7.4-com_err.patch 1476 RMD160 9176bd35da5cb224381079b50b5e1ec9c90871ab SHA1 53b8c2b8ded6de064ef304c3a27ff8346b2aed82 SHA256 434250539acffc13e0d04422ef8392a4daa6a85e11a0f523b130d78861d7ebcc
 AUX postgresql-7.4-hppa.patch 1433 RMD160 4c4021ab6654d4c131704d6def2b2d689df7f527 SHA1 2234eff32e0ae4bdecd4b21eb9f6c7be33023652 SHA256 4424694fecd4f16655cd5ff9603489fa644175ab344498040f2c88cb0962aa6b
 AUX postgresql-7.4-regress.patch 3337 RMD160 dcd1eef99595c5ae070a6778179a1b4611810ad8 SHA1 b58a22970ff3f6c489e55fa6fc1f2a5ba27f1aec SHA256 0679c01c80b0a789789cc5e4b0317e3d8e1ec4acdbe1bd42b63eab37097fa872
@@ -99,10 +102,10 @@ EBUILD postgresql-server-8.1.21.ebuild 11845 RMD160 ba74b901f704b91b725b5d1a14d0
 EBUILD postgresql-server-8.2.14.ebuild 9518 RMD160 ac994f46ce67f7f5c10e607219458c0b372e3b30 SHA1 371f1ec3488aca8910cebd7dcbeb433798c8cbeb SHA256 2787bf6a36705fc1e39061300b894fd1056216253bc68f80a1df6027c6e9cb71
 EBUILD postgresql-server-8.2.15.ebuild 9527 RMD160 3e3c847cec61efb913efa20d1c322ce6c21f8fc0 SHA1 2622175eee6373b5c585bb86e4fcc85516593531 SHA256 1b425a8156d6084cc66f986fa65bee297f18117d8b3dcd419489adb7fb42aecd
 EBUILD postgresql-server-8.2.16.ebuild 12147 RMD160 31075394dc93d37914bc6fdd700018f4620e126a SHA1 6cb99eb8ed6ec36936771cff298401e3f072f825 SHA256 13af530743614e75cd26d1322bf99aa3ddc2a9e6ed1cbcfa8bb81ede688dc4b4
-EBUILD postgresql-server-8.2.17-r1.ebuild 10148 RMD160 bc21981f9252edd6ac68994b17fd2c433f1aea36 SHA1 6b6172657ee3b168626f62632e0f3b5ac31f98cb SHA256 bfbf61cb7f7031f233d29b3be21217efa2fd8ecde2c823fbf974f06280aec58d
+EBUILD postgresql-server-8.2.17-r1.ebuild 10148 RMD160 a6c3722265d8522301fa3644af0eab8cffefc381 SHA1 2295e1d45a3d23fe41aa36c6de2fcbffcd1f780a SHA256 c03315c8c87bdaf9a922bc3f2407aa3de67bf4b917831f972f3ba50fac262596
 EBUILD postgresql-server-8.2.17.ebuild 12149 RMD160 134dbcad2a17d6989551dc34dd91ad28ec522524 SHA1 47c6d13da82d2bdef2a0b21c21732f5dfc5c77fe SHA256 127581bc0e538428376bb682cf0d998e72524d1d77dd00be75dfc08a9afbaaa9
 EBUILD postgresql-server-8.3.10.ebuild 12268 RMD160 30b2615735d67813e6f952307b3ed671c97a4949 SHA1 df8bec24f83f43fd46218fb1ef6322d65b2e8322 SHA256 f408623432954bdc498a9527987fd6b28233c7f0bf0611697e2b6db29687423b
-EBUILD postgresql-server-8.3.11-r1.ebuild 10277 RMD160 4d6df0ca85c13689d72df40fba52ee76a7dad5e2 SHA1 71cf71bd87591e63a6e83d820e8ada0f770cc5cb SHA256 87fe8550332031f6b24a6068585db84c365fe0c30b94f248e88c24591c1a49d6
+EBUILD postgresql-server-8.3.11-r1.ebuild 10276 RMD160 569445d948fdae24183179b7cf2e988f19e80392 SHA1 d9bd1296621252c3205afbd5778af448be2b5f3e SHA256 c897ff603c1715d9d1d52da9d4a14c973030a948a8cfdc5e6905fb20c456d8fc
 EBUILD postgresql-server-8.3.11.ebuild 12270 RMD160 11ae36734534533c2f869f3743b9fe3017e8f9c4 SHA1 4767625484affe0dbbfe74060fab2d2c8c734550 SHA256 f36cac8dded627cdbe51073be8295d1d05d514de02eefb4efbb35714af41c557
 EBUILD postgresql-server-8.3.8.ebuild 9637 RMD160 d868ba114642280aaea0f27e309b85e8a192f9af SHA1 6ff87abdd4f0bd43938acea1ae1c42ab2c4e72aa SHA256 b13f2d63c55fe416754c5cc8ee66262ecdd184be2f5a8d02923ea19b2ec48800
 EBUILD postgresql-server-8.3.9.ebuild 9646 RMD160 0456a53d13a58e0fdd33ac45a43471d617087ae8 SHA1 05ae34a436abedba59f8e3fea8ac5ca502cc732f SHA256 8e397a3c405e29e48a0e30aee1a1ac6f7a94806882778b63eb027cf03a6472b5
@@ -111,9 +114,16 @@ EBUILD postgresql-server-8.4.1.ebuild 9196 RMD160 9610233f48955e190154a689d96df3
 EBUILD postgresql-server-8.4.2-r1.ebuild 9681 RMD160 4bbeade4c65002c8423001e856dc2872479d76fa SHA1 4ab43f5831c20215293d98d93b289355e4660023 SHA256 5de9175091eef24a46535dcb815a21ca5e30a2930060c6d11f024796f01bf592
 EBUILD postgresql-server-8.4.2.ebuild 9273 RMD160 10bff3c64cb18114db2492459364e643a61137d2 SHA1 2589fad10e4c7e9ae88d18e6e685b6bb676101e5 SHA256 24ebc60e290f9dc367cdb3543319d2bfd39491be4cbb4011b103075c7cfc476f
 EBUILD postgresql-server-8.4.3.ebuild 12314 RMD160 53f5b09340d58e96ba0f3c2bdd2fb7cfce2bc7e8 SHA1 4a877bd878664a13c0909933b7d3ea1930db804f SHA256 4bb430970075f16168287dd64d073b3be03480ae3bb314fea6110c49ba0b5c71
-EBUILD postgresql-server-8.4.4-r1.ebuild 10345 RMD160 2642c97c47e6af88f5bef9bf1a5728efc6cf245a SHA1 d703c9b4903b5d46a9c66e185a8fcb3380663fbb SHA256 4e8a27f2558def409047e86b8db05a06dd1fb0be8c14a9c43912dcd2e6b3e577
+EBUILD postgresql-server-8.4.4-r1.ebuild 10344 RMD160 775ecf6ac627f76dee759c9b2f1db8c845b2d2b9 SHA1 23f014ea34308b0fb322dec85951a426a18535d8 SHA256 516c8074f7d71a0acb30695d15bf3b6a3f94f381ca5d150d39c11882150db279
 EBUILD postgresql-server-8.4.4.ebuild 12316 RMD160 f4c2b0921000901070c7d5a01b3b771c9c1f3939 SHA1 2ae0d94ca7880a1e08238f63ec539f9e1f1c40c8 SHA256 893717c744190f5c2717bf1fe8b2269bb25f59a5918162f5222d5a62778f344d
 EBUILD postgresql-server-9.0_beta3.ebuild 10885 RMD160 7c08628a9e94ff796c9077e26a41b75a9b7135d4 SHA1 083a9c609c217a6bd97c3464e965a91ecccd051c SHA256 0767130f494e9c184e16620cfc8b49d6abded7b4e1d64698c14943cfa2356e0b
 EBUILD postgresql-server-9.0_beta4.ebuild 10885 RMD160 1ead1ec1cf7a7b570824e61c360f83e35e9f230c SHA1 4179737ad30ba81d654322b2dd77df30f379ddc6 SHA256 87ebac0b57f0ba9a3fa8d80b8c16df99b735c3a1af643c0f490f158847e63f37
-MISC ChangeLog 28060 RMD160 376b8e044cdf5a4b264e2171b17ecc1337cf0b67 SHA1 4ab004f8d57f63cb5d3a35c9ad36217fc36a8a56 SHA256 357b184d6bd8203f951ef487e1420ff227edd232c81ee8ce008189f9f0e65bf3
+MISC ChangeLog 28262 RMD160 1d057aaf9852076af3f58793be0b755aad9feefa SHA1 594f895d9d9921a98fa28f79b7f99698235c89b6 SHA256 aabb9e21c17f5ccd5230ae560f2e8d9b7087b4deaa6e9ddebe234efe2bb916d3
 MISC metadata.xml 420 RMD160 789f5a0ce45d05125098fd7e74a816cf08f4c39b SHA1 d308d7434a37f12cd320f74ed85e1d3ca7dabc75 SHA256 ac37a5084450a782d02510149d030bd0d4a63164f2ffb7bdda3ddf344606ca62
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.15 (GNU/Linux)
+
+iEYEARECAAYFAkxi+UMACgkQcsIHjyDViGQE+ACgrB+8+dD5RgUpYu9nbdTEH/MS
+SuMAoM7QAEw9y0pNQK9bnNWKyqIAPdDE
+=h4hO
+-----END PGP SIGNATURE-----
