@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/postgresql-server
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.76 2010/08/09 19:27:57 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.77 2010/08/11 19:27:10 josejx Exp $
+
+  11 Aug 2010; Joseph Jezak <josejx@gentoo.org>
+  postgresql-server-8.2.17-r1.ebuild, postgresql-server-8.3.11-r1.ebuild,
+  postgresql-server-8.4.4-r1.ebuild:
+  Marked ppc/ppc64 stable for bug #320967.
 
 *postgresql-server-9.0_beta4 (09 Aug 2010)
 
